--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 </head>
 <body>
     <h1 id="logo">The <span id='highlight'>AJAX</span> project</h1>
-    <input type="text" id='textInput'>
-    <button id="button">Search</button> 
+    <!-- Append stuff to the container -->
+    <div id="container"></div>
+    <button id="btn" class="btn">Get users</button> 
     <script src="app.js"></script>
 </body>
 </html>
