--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="main.css">
+<link rel="stylesheet" href="./main.css">
 <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
     crossorigin="anonymous"></script>
     <title>AJAX</title>
@@ -13,6 +13,6 @@
     <!-- Append stuff to the container -->
     <div id="container"></div>
     <button id="btn" class="btn">Get users</button> 
-    <script src="app.js"></script>
+    <script src="./app.js"></script>
 </body>
 </html>
